# PSArcInterface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
.github/workflows/: ci_build.yml  release_build.yml
libpsarc/: CMakeLists.txt
libpsarc/c_interface/: CMakeLists.txt
libpsarc/c_interface/include/: psarc.h
libpsarc/c_interface/src/: psarc_c_interface.cpp
libpsarc/cmake/: LibPSArcConfig.cmake.in
libpsarc/compression/: CMakeLists.txt
libpsarc/compression/lzma/: README.md
libpsarc/hash/: CMakeLists.txt
libpsarc/include/: archive.hpp  compression.hpp  filestructure.hpp  memory.hpp  psarc.hpp  psarc_archive.hpp  psarc_compression.hpp  psarc_error.hpp  psarc_filestructure.hpp  psarc_impl.hpp  psarc_memory.hpp  types.hpp
libpsarc/src/: archive.cpp  compression.cpp  memory.cpp  psarc.cpp  psarc_archive.cpp  psarc_compression.cpp  psarc_error.cpp  psarc_impl.cpp  psarc_memory.cpp
psarc-cl/: CMakeLists.txt  config.hpp.in
psarc-cl/src/: main.cpp  pack.cpp  pack.hpp  unpack.cpp  unpack.hpp
src/: archive.hpp  filestructure.hpp  main.cpp  memory.hpp  psarc.cpp  psarc.hpp  types.hpp
tests/: CMakeLists.txt
tests/fixtures/: hello.txt
tests/fixtures/subdir/: nested.txt
tests/integration/: memory_handles.hpp  test_cli.cpp  test_roundtrip.cpp
tests/unit/: test_archive.cpp  test_compression.cpp  test_types.cpp
